--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -51,6 +51,17 @@ table {
 	to{opacity: 1;}
 }
 
+#header {
+	top: 0;
+	width: 100%;
+	height: 100px;
+}
+
+#filterContainer {
+	margin: auto;
+	width: 50%;
+}
+
 #insertBtn, #updateBtn, #studentBtn {
 	width: 200px;
 }
@@ -66,6 +77,7 @@ button {
 	cursor: pointer;
 	transition-duration: .4s;
 	border: 2px solid orange;
+	border-radius: 4px;
 	margin-top: 20px;
 	margin-right: 30px;
 	animation-name: example;
@@ -79,13 +91,13 @@ button {
 }
 
 #updateBtn {
-	position: relative;
-	left: 65%;
-	top: 20%;
+	position: absolute;
+	right: 200px;
+	top: 1;
 }
 
 #studentBtn {
-	position: relative;
+	position: absolute;
 	left: 2%;
 	top: 1;
 }
@@ -105,12 +117,13 @@ button {
 input {
 	position: relative;
 	padding: 4px 4px;
-	left: 42%;
-	width: 16%;
+	left: 20%;
+	width: 60%;
 	background-color: rgba(201, 76, 76, 0);
 	border: none;
 	border-bottom: solid 2px black;
 	outline: none;
+	text-align: center;
 }
 
 
