--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -40,6 +40,10 @@ input {
 	border-radius: 5px;
 }
 
+#timeText {
+	margin-top: 16px;
+}
+
 button[type=submit] {
     width: 100%;
     background-color: gold;
@@ -57,6 +61,10 @@ button[type=submit] {
 button[type=submit]:hover {
     background-color: blue;
     color: white;
+}
+
+#lineChart {
+	
 }
 
 .chartspecs {
