--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -4,67 +4,20 @@ canvas {
 	width: 8000px;
 }
 
-@keyframes example {
-	from{opacity: 0;}
-	to{opacity: 1;}
-}
-
 body {
-	font-family: 'Roboto', sans-serif;
 	background: linear-gradient(to bottom, #FFD700, #FFA500 50%, #FFA500 100%) no-repeat bottom;
 	background-size: 100%;
 	height: 2000px;
-	color: black;
-	animation-name: example;
-	animation-duration: .75s;
 }
 
-h1 {
-	font-weight: normal;
-	text-align: center;
-	font-size: 2em;
-	animation-duration: 1s;
-}
-
-select {
+select, button {
 	width: 100%;
 	padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input {
-	border-radius: 5px;
 }
 
 #timeText {
 	margin-top: 16px;
-}
-
-button[type=submit] {
-    width: 100%;
-    background-color: gold;
-    color: black;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    transition-duration: .4s;
-}
-
-button[type=submit]:hover {
-    background-color: orange;
-    color: white;
-}
-
-button[type=submit]:focus, input:focus {
-	outline: none;
 }
 
 #lineChart {
@@ -75,13 +28,13 @@ button[type=submit]:focus, input:focus {
 	width: 100%;
 	margin: 0px;
 	padding: 20px;
-	animation-duration: 3s;
 }
 
 #logo {
 	margin-left: 3%;
 	margin-top: 1%;
 	margin-bottom: 0;
+	animation-duration: 0s;
 }
 
 #logoDiv {
