--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -22,15 +22,34 @@ h1, h3 {
 }
 
 
-select, input {
-	display: inline-block;
+/*Input CSS (including some button stuff)*/
+select[white], input[white] {
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1), 3px 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15), 3px 3px 10px rgba(0, 0, 0, 0.1);
+    transition-duration: .4s;
+}
+select[black], input[black] {
+	background-color: rgba(201, 76, 76, 0);
+	box-shadow: none;
+	border: none;
+	border-bottom: solid 2px black;
+	border-radius: 0px;
+	outline: none;
+}
+select[big], input[big], button[big] {
+	display: inline-block;
+	width: 100%;
+	padding: 12px 20px;
+    margin: 8px 0;
 }
 
 input:focus, select:focus, button:focus {
 	outline: none;
+}
+
+input[white]:focus, select[white]:focus {
+	box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4), 5px 5px 20px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -46,7 +65,7 @@ button {
 	transition-duration: .4s;
 	border: none;
 	border-radius: 4px;
-	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1), 3px 3px 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15), 3px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
@@ -70,14 +89,14 @@ button:hover {
 	width: 100px;
 	transform-origin: 50% 50%;
 	border-radius: 50%;
-	background-color: rgb(0,0,0);
-	opacity: 0.2;
+	background: radial-gradient(rgba(0,0,0,0.05) 0%, rgba(0,0,0,0.5) 100%);
+	opacity: 1;
 	animation: rippleAnim 2s linear;
 }
 
 @keyframes rippleAnim {
-	from { opacity: 0.2; transform: scale(0, 0); }
-	to { opacity: 0; transform: scale(25, 25); }
+	from { opacity: 1; transform: scale(0, 0); }
+	to { opacity: 0; transform: scale(35, 35); }
 }
 
 
