Client-Side Verification
Different from validation, forms give text notification when a form is submitted and it actually works

The rest is organization and minor stuff

--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -82,6 +82,10 @@ input[white]:focus, select[white]:focus {
 	color: red;
 	animation: none;
 }
+.successText {
+	color: blue;
+	animation: none;
+}
 
 
 
