--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -1,15 +1,6 @@
-/*ENTRANCE ANIMATION*/
-@keyframes example {
-	from{opacity: 0;}
-	to{opacity: 1;}
-}
-
-
 /*General CSS*/
 * {
-	box-sizing: border-box;
-	animation-name: example;
-	animation-duration: 2s;
+	box-sizing: border-box; /*ensures all elements pad on the inside*/
 }
 body {
 	font-family: 'Roboto', sans-serif;
@@ -19,6 +10,25 @@ h1, h3 {
 	text-align: center;
 	font-weight: normal;
 }
+
+/*Animation CSS*/
+@keyframes enter {
+	from{opacity: 0;}
+	to{opacity: 1;}
+}
+@keyframes exit {
+	from{opactiy: 1;}
+	to{opacity: 0;}
+}
+* {
+	animation-name: enter;
+	animation-duration: 2s;
+}
+*.ng-leave {
+	animation-name: exit;
+	animation-duration: 0.5s;
+}
+
 
 
 /*Input CSS (including some button stuff)*/
