--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -6,10 +6,20 @@ body {
 	font-family: 'Roboto', sans-serif;
 	color: black;
 }
+#header {
+	top: 0;
+	width: 100%;
+	overflow: auto;
+}
+#footer {
+	bottom: 0;
+	margin-top: 250px;
+}
 h1, h3 {
 	text-align: center;
 	font-weight: normal;
 }
+
 
 /*Animation CSS*/
 @keyframes enter {
