Into the Future
The chart now has an option to increase the timespan shown into times that haven't even happened yet

(among other small bug fixes and y-axis adjustments and stuff)

--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -14,6 +14,14 @@ h1 {
 	margin-bottom: 0px;
 }
 
+select[white], input[white], .invalidContainer {
+    margin: 0;
+}
+
+input[type="number"] {
+	width: 80px;
+}
+
 #lineChart {
 	
 }
