--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -2,7 +2,7 @@
 body {
 	background: linear-gradient(to right, #FFD700, #FFA500);
 	background-size: 100%;
-	height: 1000%;
+	height: auto;
 	color: white;
 }
 #header {
