--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -37,6 +37,13 @@ input[type="number"] {
 	margin-right: auto;
 }
 
+#logo {
+	max-width: 160px;
+	max-height: 80px;
+	width: auto;
+	height: auto;
+}
+
 .logoOff {
 	display: none;
 }
