Actually noticeable minor changes
- Removed the show/hide form button on the progress chart
- Added disabled options for selects when data is pending (will probably do more stuff to display that things are loading)
- Null check for grade string in Java
- Abbreviations in GradeIncrementer code

--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -26,15 +26,12 @@ body {
 	background-color: black;
 }
 #tableContainer {
+	cursor: pointer;
 	animation-duration: 0s;
 }
 #tableContainer:hover{
 	background-color: #FFA500;
 }
-
-/*.columnContainer, .column {
-	pointer-events: none;
-}*/
 
 .expandedContent {
 	height: 180px;
