EditRecord (second commit)
Not complete yet, but it's coming together. Refactored UpdateRecord to EditRecord, where all the values can be readily changed. Except they can't yet. Working on it

--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -42,13 +42,13 @@ body {
 
 
 /*BUTTON CSS*/
-#insertBtn, #updateBtn, #studentBtn {
+#insertBtn, #listBtn {
 	width: 200px;
 }
-#insertBtn, #updateBtn {
+#insertBtn {
 	float: right;
 }
-#studentBtn {
+#listBtn {
 	float: left;
 }
 #dataToggleBtn {
