--- a/Front-end/RecordStyle.css
+++ b/Front-end/RecordStyle.css
@@ -10,14 +10,16 @@ body {
 
 
 /*Used for the insertRecord sheet to space out number inputs at the bottom*/
-#mistakes, #testTime {
+#rep, #mistakes, #testTime {
     float: left;
     width: auto;
     margin-right: 20px;
 }
 
-/*Used to decrease padding between rows in editStudent*/
-#editStudentRow {
+/*Used to decrease padding between rows in edit pages*/
+#editRow {
     padding: 0px;
 }
-
+#editSingleRow {
+	padding: 0px 20px;
+}
