--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -69,13 +69,13 @@ body {
 	width: 50%;
 }
 #filterText {
+	display: block;
 	text-align: center;
 }
 
 input[black] {
 	position: relative;
 	padding: 4px 4px;
-	left: 20%;
-	width: 60%;
+	width: 100%;
 	text-align: center;
 }
