Took Ansh's Advice
Some very quick fixes of a bunch of small things

--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -68,6 +68,9 @@ body {
 	margin: auto;
 	width: 50%;
 }
+#filterContainer>.column {
+	padding: 10px;
+}
 #filterText {
 	display: block;
 	text-align: center;
