--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -25,14 +25,14 @@ body {
 #tableHeaderContainer {
 	background-color: black;
 }
-#tableContainer {
+#tableContainer, #tableHeaderContainer>.column {
 	cursor: pointer;
 	animation-duration: 0s;
 }
 #tableContainer:hover {
 	background-color: #FFA500;
 }
-#tableContainer:focus {
+#tableContainer:focus, #tableHeaderContainer>.column:focus {
 	outline: none;
 }
 
