Beginning AngularJS Material
Split this on a new branch because I am unsure if it will work.

Messing around with AngularJS Material to see if things can look good.

--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -68,7 +68,7 @@ body {
 	margin: auto;
 	width: 50%;
 }
-#filterContainer>.column {
+#filterContainer > md-input-container {
 	padding: 10px;
 }
 #filterText {
