Front-end Login bar
A bar displays at the top of the list webpages which tells you your login status

Login status now has some management in the middleware too

--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -5,15 +5,17 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	color: black;
+	margin: 0px;
 }
-#header {
-	top: 0;
+#siteHeader {
+	background-color: black;
+	color: white;
+	display: block;
 	width: 100%;
-	overflow: auto;
+	padding: 10px;
 }
-#footer {
-	bottom: 0;
-	margin-top: 250px;
+#siteHeader div {
+	display: inline;
 }
 h1, h3 {
 	text-align: center;
