--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -6,7 +6,14 @@ body {
 	color: white;
 }
 #header {
+	top: 0;
+	width: 100%;
+	overflow: auto;
 	padding: 20px;
+}
+#footer {
+	bottom: 0;
+	margin-top: 250px;
 }
 
 /*TABLE CSS*/
