Everything Changes with Demo Mode
It's true!

Added functionality for guest viewing with read-only sample data.

The actual concrete samples will be added soon.

Also login will be actually secure and not global... eventually

Also added more headers and moved the delete buttons and such

--- a/Front-end/RecordStyle.css
+++ b/Front-end/RecordStyle.css
@@ -8,6 +8,10 @@ body {
     padding: 20px;
 }
 
+#deleteButton {
+    float: right;
+}
+
 
 /*Used for the insertRecord sheet to space out number inputs at the bottom*/
 #rep, #mistakes, #testTime {
