index.html Patch
Learned that AWS treats an "index.html" as the frontpage so I adjusted the name

Also includes a CSS fix on the line chart page

--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -1,4 +1,8 @@
 /*General CSS*/
+html {
+	min-height: 100%;
+}
+
 body {
 	background: linear-gradient(to bottom, #FFD700, #FFA500 50%, #FFA500 100%) no-repeat bottom;
 	background-size: 100%;
