--- a/Front-end/HomeStyle.css
+++ b/Front-end/HomeStyle.css
@@ -1,17 +1,38 @@
+body {
+	min-height: 100%;
+}
+
 .exterior {
 	padding: 20px;
+	height: 100vh;
 }
 
 #logo {
 	display: block;
   	margin-left: auto;
   	margin-right: auto;
-  	width: 30%;
+  	width: 40%;
   	height: auto;
 }
 
 #loginBlock {
 	position: relative;
+	width: 90%;
+	left: 5%;
+}
+
+button {
+	margin: 0;
+}
+
+div[whitecard] {
+	background: white;
+	box-shadow: 0px 14px 28px rgba(0, 0, 0, 0.25), 0px 10px 10px rgba(0, 0, 0, 0.22);
+	padding: 50px 10px;
+	position: absolute;
 	width: 50%;
-	left: 25%;
+	max-width: 500px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -55%);
 }
