--- a/Front-end/HomeStyle.css
+++ b/Front-end/HomeStyle.css
@@ -25,9 +25,8 @@ button {
 	margin: 0;
 }
 
-div[whitecard] {
+md-whiteframe {
 	background: white;
-	box-shadow: 0px 14px 28px rgba(0, 0, 0, 0.25), 0px 10px 10px rgba(0, 0, 0, 0.22);
 	padding: 50px 10px;
 	position: absolute;
 	width: 50%;
