EditRecord Material Update
OK that one was more difficult than I expected

I tried to merge the record editing controllers because they share a lot of functionality

Turns out md-select doesn't quite call ng-change in the same way that select does, so issues arose

And I found out that the classes Master and Record, while being very similar, used different variable names for some things, so I changed those things

Turns out those changes broke a few more things, so I don't entirely know if this commit is safe to use - for now assume it's not

--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -27,7 +27,7 @@ h1, h3 {
 }
 
 
-/*Animation CSS
+/*Animation CSS*/
 @keyframes enter {
 	from{opacity: 0;}
 	to{opacity: 1;}
@@ -36,14 +36,14 @@ h1, h3 {
 	from{opacity: 1;}
 	to{opacity: 0;}
 }
-* {
+*.ng-enter, *.ng-show {
 	animation-name: enter;
 	animation-duration: 1s;
 }
 *.ng-leave, *.ng-hide {
 	animation-name: exit;
 	animation-duration: 0.5s;
-}*/
+}
 
 
 
