Fix lineChart form
Removing md-slider, because it doesn't work

--- a/Front-end/lineChart.css
+++ b/Front-end/lineChart.css
@@ -12,11 +12,12 @@ body {
 }
 
 .expandedContent {
-	height: 600px;
+	height: 400px;
 	margin: 0px;
 }
 
 .collapsedContent {
+	/*height: 400px;*/
 	margin: 0px;
 }
 
