Header + Other Material
These are the last few html pages to get the material upgrade. A merge is coming but I still need to make sure everything is the way I want.

Like icons. I want to add those to the header, actually. You know what, it might be a couple more commits.

--- a/Front-end/siteStyle.css
+++ b/Front-end/siteStyle.css
@@ -12,14 +12,9 @@ body {
 	margin: 0px;
 }
 #siteHeader {
-	background-color: black;
 	color: white;
-	display: block;
-	width: 100%;
-	padding: 10px;
-}
-#siteHeader div {
-	display: inline;
+	font-size: 16px;
+	min-height: 50px;
 }
 h1, h3 {
 	text-align: center;
