--- a/Front-end/ListStyle.css
+++ b/Front-end/ListStyle.css
@@ -32,7 +32,7 @@ body {
 #tableHeaderContainer {
 	background-color: black;
 }
-#tableContainer, #tableHeaderContainer>.column {
+#tableContainer, #tableHeaderContainer .column[sort] {
 	cursor: pointer;
 	animation-duration: 0s;
 }
